--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@shopify/flash-list": "^1.6.4",
     "axios": "^1.6.8",
     "csv-parser": "^3.0.0",
     "expo": "~50.0.14",
+    "expo-file-system": "^16.0.9",
     "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
@@ -35,6 +38,7 @@
     "@babel/core": "^7.20.0",
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.12",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.0",
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
