--- a/package.json
+++ b/package.json
@@ -11,27 +11,46 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.7.6",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@shopify/flash-list": "^1.6.4",
+    "@types/react-native": "^0.73.0",
     "axios": "^1.6.8",
     "csv-parser": "^3.0.0",
-    "expo": "~50.0.14",
+    "deprecated-react-native-prop-types": "^5.0.0",
+    "expo": "^51.0.2",
     "expo-file-system": "^16.0.9",
     "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "papaparse": "^5.4.1",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "^0.74.1",
+    "react-native-calendars": "^1.1304.1",
+    "react-native-fast-scroll": "^0.3.0",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-photo-view": "^1.5.2",
+    "react-native-picker-select": "^9.1.3",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
+    "react-native-zoom-view": "^1.0.2",
+    "react-native-zoomable-view": "^0.3.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
@@ -39,7 +58,7 @@
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.12",
     "@types/papaparse": "^5.3.14",
-    "@types/react": "^18.3.0",
+    "@types/react": "^18.3.3",
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
