--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.7.6",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -22,6 +23,7 @@
     "csv-parser": "^3.0.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^51.0.2",
+    "expo-asset": "^10.0.6",
     "expo-file-system": "^16.0.9",
     "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
@@ -51,6 +53,7 @@
     "react-native-web": "~0.19.6",
     "react-native-zoom-view": "^1.0.2",
     "react-native-zoomable-view": "^0.3.1",
+    "react-query": "^3.39.3",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
