--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-picker/picker": "^2.7.6",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -27,6 +28,7 @@
     "expo-file-system": "^16.0.9",
     "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.25.15",
     "moment": "^2.30.1",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
