--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "^1.11.0",
@@ -26,10 +27,12 @@
     "expo": "^51.0.2",
     "expo-asset": "^10.0.6",
     "expo-file-system": "^16.0.9",
+    "expo-notifications": "~0.28.7",
     "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.25.15",
     "moment": "^2.30.1",
+    "native-notify": "^4.0.4",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "18.2.0",
