Android Build, various tweaks

--- a/app.json
+++ b/app.json
@@ -43,8 +43,6 @@
         "projectId": "8ca33188-9b28-439a-a688-0b09b8eda6c8"
       }
     },
-    "runtimeVersion": {
-      "policy": "sdkVersion"
-    }
+    "runtimeVersion": "1.0.0"
   }
 }
