--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,7 @@
       "developmentClient": false,
       "distribution": "store",
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "apk"
       }
     }
   }
