--- a/eas.json
+++ b/eas.json
@@ -8,6 +8,9 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "ios": {
+        "simulator": true
       }
     },
     "production": {
@@ -15,7 +18,8 @@
       "distribution": "store",
       "android": {
         "buildType": "apk"
-      }
+      },
+      "ios": {}
     }
   }
 }
