--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -55,3 +55,6 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+systemProp.gradle.internal.http.ssl.ignore=true
+systemProp.gradle.internal.https.ssl.ignore=true
