App.json changes, logo reset, build.gradle reverted to sdk 52, build realigned with new version

--- a/eas.json
+++ b/eas.json
@@ -19,14 +19,17 @@
       "android": {
         "buildType": "apk"
       },
-      "ios": {}
+      "ios": {
+        "enterpriseProvisioning": "adhoc"
+      }
     }
   },
   "submit": {
     "production": {
       "ios": {
         "appleId": "hoffmanlhunter@gmail.com"
-      }
+      },
+      "android": {}
     }
   }
 }
