--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,13 +86,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.bonnaroo.app'
+    namespace 'com.marina1828.yourappslug'
     defaultConfig {
-        applicationId 'com.bonnaroo.app'
+        applicationId 'com.marina1828.yourappslug'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.2.0"
     }
     signingConfigs {
         debug {
