--- a/app.json
+++ b/app.json
@@ -1,56 +1,37 @@
 {
   "expo": {
-    "name": "Bonnaroo App",
-    "displayName": "Archlight",
+    "name": "Archlight",
     "slug": "your-app-slug",
     "version": "1.2.0",
-    "orientation": "default",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "entryPoint": "./index.tsx",
-    "notification": {
-      "icon": "./assets/notification-icons/android/Custom Roo App Notification Icon Android-48-01.png",
-      "color": "#000000",
-      "androidMode": "default",
-      "androidCollapsedTitle": "#${unread_notifications} new notifications"
-    },
-    "android": {
-      "package": "com.bonnaroo.app",
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/Icons/Archlight-Logo.png",
-        "backgroundColor": "#000000"
-      },
-      "newArchEnabled": true
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0,
-      "url": "https://u.expo.dev/8ca33188-9b28-439a-a688-0b09b8eda6c8"
-    },
+    "runtimeVersion": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.marina.bonnarooapp",
-      "buildNumber": "1.2.0",
-      "newArchEnabled": true,
-      "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
-      },
-      "icon": "./assets/Icons/Archlight-Logo.png"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
     "extra": {
       "eas": {
         "projectId": "8ca33188-9b28-439a-a688-0b09b8eda6c8"
       }
     },
-    "runtimeVersion": "1.0.0"
+    "plugins": [
+      "expo-asset",
+      "expo-sqlite"
+    ],
+    "android": {
+      "package": "com.marina1828.yourappslug",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/Icons/Archlight-Logo.png",
+        "backgroundImage": "./assets/Icons/Archlight-Logo.png"
+      }
+    },
+    "icon": "./assets/Icons/Archlight-Logo.png",
+    "splash": {
+      "image": "./assets/Icons/Archlight-Logo.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "notification": {
+      "icon": "./assets/notification-icons/Archlight Notification Logo 3 - No Buffer.png",
+      "color": "#ffffff"
+    }
   }
 }
