added plugins to app.json

--- a/app.json
+++ b/app.json
@@ -14,7 +14,19 @@
     },
     "plugins": [
       "expo-asset",
-      "expo-sqlite"
+      "expo-sqlite",
+      "@notifee/react-native",
+      "@react-native-async-storage/async-storage",
+      "@react-native-picker/picker",
+      "react-native-screens",
+      "react-native-safe-area-context",
+      "react-native-vector-icons",
+      "react-native-gesture-handler",
+      "react-native-reanimated",
+      "react-native-fast-image",
+      "react-native-push-notification",
+      "react-native-orientation-locker",
+      "@react-native-community/masked-view"
     ],
     "android": {
       "package": "com.marina1828.yourappslug"
