--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="com.marina1828.yourappslug"/>
-        <data android:scheme="exp+your-app-slug"/>
+        <data android:scheme="com.marina1828.archlight"/>
+        <data android:scheme="exp+archlight"/>
       </intent-filter>
     </activity>
   </application>
