--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "Archlight",
+    "slug": "your-app-slug",
     "version": "1.2.0",
     "sdkVersion": "52.0.0",
     "runtimeVersion": "1.0.0",
