--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext {
         buildToolsVersion = findProperty('android.buildToolsVersion') ?: '35.0.0'
@@ -16,8 +14,8 @@ buildscript {
     }
     dependencies {
         classpath('com.android.tools.build:gradle:8.0.2')
-        classpath('com.facebook.react:react-native-gradle-plugin:1.6.0')
-        classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+        classpath('com.facebook.react:react-native-gradle-plugin:0.76.1')
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
     }
 }
 
