--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -55,3 +55,6 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+org.gradle.jvmargs=-Xmx6144m
+# allow more memory for the gradle daemon
