--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,8 +16,8 @@ buildscript {
     }
     dependencies {
         classpath('com.android.tools.build:gradle')
-        classpath('com.facebook.react:react-native-gradle-plugin:0.76.1')
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        classpath('com.facebook.react:react-native-gradle-plugin')
+        classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
     }
 }
 
