--- a/app.json
+++ b/app.json
@@ -5,7 +5,9 @@
     "version": "1.3.1",
     "sdkVersion": "52.0.0",
     "runtimeVersion": "1.0.0",
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "extra": {
       "eas": {
         "projectId": "8ca33188-9b28-439a-a688-0b09b8eda6c8"
@@ -28,6 +30,14 @@
         "backgroundColor": "#000000"
       },
       "buildType": "apk"
+    },
+    "ios": {
+      "bundleIdentifier": "com.marina1828.archlight",
+      "buildNumber": "1.3.1",
+      "supportsTablet": true,
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     }
   }
 }
