--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-native-picker-select": "^9.1.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.0",
