--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.4",
     "install": "^0.13.0",
+    "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
     "native-notify": "^4.0.4",
     "papaparse": "^5.4.1",
