--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Archlight",
     "slug": "your-app-slug",
-    "version": "1.3.6",
+    "version": "1.3.6b",
     "sdkVersion": "52.0.0",
     "runtimeVersion": "1.0.0",
     "assetBundlePatterns": [
@@ -33,7 +33,7 @@
     },
     "ios": {
       "bundleIdentifier": "com.marina1828.archlight",
-      "buildNumber": "1.3.6",
+      "buildNumber": "1.3.6b",
       "supportsTablet": true,
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
